# lpm

./: .gitignore  LICENSE  README.md  pyproject.toml
lpm/: __init__.py  commandline.py  game.py  screen.py  snippets.py  stats.py
tests/: test_stats.py
